--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="outerPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1224.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.javafx.controller.GameController">
+<Pane fx:id="outerPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1224.0" style="-fx-background-color: #F9C164;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.javafx.controller.GameController">
    <children>
       <Pane fx:id="pane" layoutX="100.0" layoutY="200.0" prefHeight="200.0" prefWidth="1024.0" />
       <Button fx:id="resetGameButton" layoutX="223.0" layoutY="472.0" mnemonicParsing="false" onAction="#resetGame" text="RESET GAME" />
       <Button fx:id="exitGameButton" layoutX="892.0" layoutY="472.0" mnemonicParsing="false" onAction="#exitGame" text="EXIT" />
       <VBox layoutX="1116.0" layoutY="193.0" prefHeight="200.0" prefWidth="100.0" />
-      <Label fx:id="messageLabel" layoutX="418.0" layoutY="145.0" prefHeight="35.0" prefWidth="531.0">
+      <Label fx:id="messageLabel" layoutX="436.0" layoutY="147.0" prefHeight="35.0" prefWidth="531.0">
          <font>
             <Font size="28.0" />
          </font>
