--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -34,5 +35,7 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <ImageView fx:id="kep3" fitHeight="150.0" fitWidth="200.0" layoutX="9.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="kep4" fitHeight="150.0" fitWidth="200.0" layoutX="1016.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
